# GameFluxer

./: ENTREGA_FINAL.md  README.md  build.gradle.kts  config.json  settings.gradle.kts
.github/: TELEGRAM_SETUP.md
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_database.cpp  native_download_engine.cpp  native_downloader.cpp  native_file_writer.cpp  native_github_importer.cpp  native_http_client.cpp  native_json_parser.cpp  native_network.cpp  native_zip_importer.cpp
app/src/main/cpp/include/: native_database.h  native_download_engine.h  native_download_manager.h  native_download_types.h  native_downloader.h  native_file_writer.h  native_github_importer.h  native_http_client.h  native_json_parser.h  native_network.h  native_types.h  native_zip_importer.h
app/src/main/java/com/gamestore/app/: GameStoreApplication.kt  MainActivity.kt
app/src/main/java/com/gamestore/app/service/: DownloadService.kt
app/src/main/java/com/gamestore/app/util/: DatabaseExporter.kt  DownloadDebugHelper.kt  ExternalDownloadFetcher.kt  GitHubImporter.kt  GoFileExtractor.kt  GoogleDriveExtractor.kt  JsonImporter.kt  MediaFireExtractor.kt  NativeDownloader.kt  NativeImporter.kt  PermissionHelper.kt  ShizukuInstaller.kt  (+2 more)
app/src/main/python/: README.md  gofile_extractor.py
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
(+34 files in other folders)
